syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.nhirakawa.server.transport.grpc";

service Wilson {
    rpc Heartbeat (HeartbeatRequestProto) returns (HeartbeatResponseProto) {}
    rpc RequestVote (VoteRequestProto) returns (VoteResponseProto) {}
}

message HeartbeatRequestProto {
    int64 timestamp = 1;
}

message HeartbeatResponseProto {
    int64 timestamp = 1;
}

message VoteRequestProto {
    ClusterMemberProto cluster_member = 1;
    int64 term = 2;
    int64 last_log_index = 3;
    int64 last_log_term = 4;
    int64 timestamp = 5;
}

message VoteResponseProto {
    ClusterMemberProto cluster_member = 1;
    int64 term = 2;
    bool vote_granted = 3;
    int64 timestamp = 4;
}

message ClusterMemberProto {
    string host = 1;
    int32 port = 2;
}

